# nvtabular_triton_backend

./: CMakeLists.txt  README.md
.github/workflows/: blossom-ci.yml  ci.yml
ci/: build_and_test.sh
cmake/: TritonNVTabularBackendConfig.cmake.in
src/: backend.cc  libtriton_nvtabular.ldscript  model_inst_state.h  model_inst_state.hpp  model_state.h  model_state.hpp  nvtabular.h  nvtabular.hpp  pybind.hpp  triton_python_backend_utils.cc  triton_python_backend_utils.hpp  triton_utils.hpp  utils.hpp
tests/: pyproject.toml  test_nvtabular_backend.py
